Feature/conluz 174 (#175)
* [conluz-174] Make is_platform_admin the sole source of platform privilege

The community access guard and context filter authorized platform-level
operations using the obsolete users.role == ADMIN, making the legacy column
an authorization input. Source platform privilege exclusively from
User.isPlatformAdmin() across the guard, the community context filter, and the
two remaining authorization reads (CreateUserServiceImpl, GetSuppliesByUserIdController).

Adds an escalation test proving a user with role=ADMIN but isPlatformAdmin=false
and no memberships receives no platform grants and is denied community operations.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* [conluz-174] Remove obsolete users.role column and Role enum

With platform privilege now sourced exclusively from is_platform_admin, the
legacy users.role column and Role enum are dead authorization weight. Remove
them from the domain User, UserEntity, mappers, the user request/response DTOs
and CSV import, and the bootstrap lookup (now findFirstByNumber). Add a Liquibase
changeset dropping the column, wired after the membership backfill that reads it.

JWT 'role' claim dropped: no backend reader existed (getRole(Token) had no
callers); removed the claim, JwtAuthRepository.getRole and AuthRepository.getRole.

BREAKING API CHANGE: 'role' is no longer accepted in create/update user requests
or the CSV import, and is no longer returned in user responses. Because
fail-on-unknown-properties is enabled, clients still sending 'role' will receive
400 — the frontend must be updated.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* [conluz-174] Update Swagger docs to reflect platform/community authorization

The @Operation descriptions still referenced the obsolete "Required Role: ADMIN"
from the pre-multi-community model. Align them with the actual @PreAuthorize guards:
- canManageCommunity/Plant/SharingAgreement, canEditUser, canCreateUserIn,
  canManageMembership