@@ -9,6 +9,7 @@ import org.lucoenergia.conluz.domain.production.huawei.get.GetHuaweiConfigReposi
 import org.lucoenergia.conluz.domain.production.plant.Plant;
 import org.lucoenergia.conluz.domain.production.plant.PlantMother;
 import org.lucoenergia.conluz.domain.production.plant.PlantNotFoundException;
+import org.lucoenergia.conluz.domain.production.plant.get.GetPlantRepository;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -34,6 +35,9 @@ class HuaweiProductionMonthlyAggregationServiceTest {
     @Mock
     private GetHuaweiConfigRepository getHuaweiConfigRepository;
 
+    @Mock
+    private GetPlantRepository getPlantRepository;
+
     @InjectMocks
     private HuaweiProductionMonthlyAggregationServiceImpl service;
 
@@ -45,22 +49,6 @@ class HuaweiProductionMonthlyAggregationServiceTest {
                 .setEnabled(Boolean.TRUE)
                 .setPlantId(plantId)
                 .build();
-    }
-
-    @Test
-    void testAggregateMonthlyForAllPlantsAllMonths() {
-        Plant plant1 = PlantMother.random().build();
-        Plant plant2 = PlantMother.random().build();
-        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs()).thenReturn(
-                List.of(configForPlant(plant1.getId()), configForPlant(plant2.getId())));
-        when(getEnergyStationRepository.findById(plant1.getId())).thenReturn(Optional.of(plant1));
-        when(getEnergyStationRepository.findById(plant2.getId())).thenReturn(Optional.of(plant2));
-
-        service.aggregateMonthlyProductions(2024);
-
-        // 2 plants × 12 months = 24 calls
-        verify(aggregationRepository, times(24))
-                .aggregateMonthlyProduction(any(Plant.class), any(Month.class), eq(2024));
     }
 
     @Test
@@ -79,24 +67,36 @@ class HuaweiProductionMonthlyAggregationServiceTest {
     }
 
     @Test
-    void testAggregateMonthlyForSpecificPlantAndMonth() {
-        Plant plant = PlantMother.random().build();
-        when(getEnergyStationRepository.findByCode(plant.getCode())).thenReturn(Optional.of(plant));
+    void testAggregateMonthlyForAllPlants_whenNoEnabledConfigs_thenSkip() {
+        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs()).thenReturn(Collections.emptyList());
 
-        service.aggregateMonthlyProductions(plant.getCode(), Month.JUNE, 2024);
+        service.aggregateMonthlyProductions(Month.MARCH, 2024);
 
-        verify(aggregationRepository, times(1))
-                .aggregateMonthlyProduction(eq(plant), eq(Month.JUNE), eq(2024));
+        verifyNoInteractions(getEnergyStationRepository);
+        verifyNoInteractions(aggregationRepository);
     }
 
     @Test
-    void testAggregateMonthlyWithPlantNotFound() {
-        String unknownCode = "UNKNOWN_PLANT";
-        when(getEnergyStationRepository.findByCode(unknownCode)).thenReturn(Optional.empty());
+    void testAggregateMonthlyForAllPlants_whenPlantNotResolved_thenSkipsAggregation() {
+        UUID missingPlantId = UUID.randomUUID();
+        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs())
+                .thenReturn(List.of(configForPlant(missingPlantId)));
+        when(getEnergyStationRepository.findById(missingPlantId)).thenReturn(Optional.empty());
 
-        assertThrows(PlantNotFoundException.class, () ->
-                service.aggregateMonthlyProductions(unknownCode, Month.JUNE, 2024));
+        service.aggregateMonthlyProductions(Month.MAY, 2024);
 
+        verify(aggregationRepository, never())
+                .aggregateMonthlyProduction(any(Plant.class), any(Month.class), anyInt());
+    }
+
+    @Test
+    void testAggregateMonthlyForAllPlants_whenConfigHasNoPlantId_thenSkipsAggregation() {
+        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs())
+                .thenReturn(List.of(configForPlant(null)));
+
+        service.aggregateMonthlyProductions(Month.MAY, 2024);
+
+        verify(getEnergyStationRepository, never()).findById(any(UUID.class));
         verify(aggregationRepository, never())
                 .aggregateMonthlyProduction(any(Plant.class), any(Month.class), anyInt());
     }
@@ -117,22 +117,79 @@ class HuaweiProductionMonthlyAggregationServiceTest {
     }
 
     @Test
-    void testAggregateMonthlyWithNoEnabledConfigs() {
-        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs()).thenReturn(Collections.emptyList());
+    void testAggregateMonthlyForCommunityWholeYear() {
+        UUID communityId = UUID.randomUUID();
+        Plant plant1 = PlantMother.random().build();
+        Plant plant2 = PlantMother.random().build();
+        when(getPlantRepository.findPlantCodesByCommunity(communityId))
+                .thenReturn(List.of(plant1.getCode(), plant2.getCode()));
+        when(getEnergyStationRepository.findByCode(plant1.getCode())).thenReturn(Optional.of(plant1));
+        when(getEnergyStationRepository.findByCode(plant2.getCode())).thenReturn(Optional.of(plant2));
 
-        service.aggregateMonthlyProductions(2024);
+        service.aggregateMonthlyProductions(communityId, 2024);
 
-        verifyNoInteractions(getEnergyStationRepository);
-        verifyNoInteractions(aggregationRepository);
+        // 2 plants × 12 months = 24 calls
+        verify(aggregationRepository, times(12))
+                .aggregateMonthlyProduction(eq(plant1), any(Month.class), eq(2024));
+        verify(aggregationRepository, times(12))
+                .aggregateMonthlyProduction(eq(plant2), any(Month.class), eq(2024));
     }
 
     @Test
-    void testAggregateMonthly_whenNoEnabledConfigs_thenSkip() {
-        when(getHuaweiConfigRepository.getEnabledHuaweiConfigs()).thenReturn(Collections.emptyList());
+    void testAggregateMonthlyForCommunitySpecificMonth() {
+        UUID communityId = UUID.randomUUID();
+        Plant plant1 = PlantMother.random().build();
+        Plant plant2 = PlantMother.random().build();
+        when(getPlantRepository.findPlantCodesByCommunity(communityId))
+                .thenReturn(List.of(plant1.getCode(), plant2.getCode()));
+        when(getEnergyStationRepository.findByCode(plant1.getCode())).thenReturn(Optional.of(plant1));
+        when(getEnergyStationRepository.findByCode(plant2.getCode())).thenReturn(Optional.of(plant2));
 
-        service.aggregateMonthlyProductions(2024);
+        service.aggregateMonthlyProductions(communityId, Month.JULY, 2024);
 
-        verifyNoInteractions(getEnergyStationRepository);
-        verifyNoInteractions(aggregationRepository);
+        verify(aggregationRepository, times(1))
+                .aggregateMonthlyProduction(eq(plant1), eq(Month.JULY), eq(2024));
+        verify(aggregationRepository, times(1))
+                .aggregateMonthlyProduction(eq(plant2), eq(Month.JULY), eq(2024));
+    }
+
+    @Test
+    void testAggregateMonthlyForSpecificPlant() {
+        UUID communityId = UUID.randomUUID();
+        Plant plant = PlantMother.random().build();
+        when(getEnergyStationRepository.findByCode(plant.getCode())).thenReturn(Optional.of(plant));
+        when(getPlantRepository.findPlantCodesByCommunity(communityId)).thenReturn(List.of(plant.getCode()));
+
+        service.aggregateMonthlyProductions(communityId, plant.getCode(), Month.AUGUST, 2024);
+
+        verify(aggregationRepository, times(1))
+                .aggregateMonthlyProduction(eq(plant), eq(Month.AUGUST), eq(2024));
+    }
+
+    @Test
+    void testAggregateMonthlyForSpecificPlant_whenPlantNotFound_thenThrows() {
+        UUID communityId = UUID.randomUUID();
+        String plantCode = "UNKNOWN";
+        when(getEnergyStationRepository.findByCode(plantCode)).thenReturn(Optional.empty());
+
+        assertThrows(PlantNotFoundException.class,
+                () -> service.aggregateMonthlyProductions(communityId, plantCode, Month.AUGUST, 2024));
+
+        verify(aggregationRepository, never())
+                .aggregateMonthlyProduction(any(Plant.class), any(Month.class), anyInt());
+    }
+
+    @Test
+    void testAggregateMonthlyForSpecificPlant_whenPlantNotInCommunity_thenThrows() {
+        UUID communityId = UUID.randomUUID();
+        Plant plant = PlantMother.random().build();
+        when(getEnergyStationRepository.findByCode(plant.getCode())).thenReturn(Optional.of(plant));
+        when(getPlantRepository.findPlantCodesByCommunity(communityId)).thenReturn(Collections.emptyList());
+
+        assertThrows(PlantNotFoundException.class,
+                () -> service.aggregateMonthlyProductions(communityId, plant.getCode(), Month.AUGUST, 2024));
+
+        verify(aggregationRepository, never())
+                .aggregateMonthlyProduction(any(Plant.class), any(Month.class), anyInt());
     }
 }
